Corrected alignment of nav-add and added video tag

--- a/style.css
+++ b/style.css
@@ -29,13 +29,13 @@
                 cursor: pointer;
             }
             .nav-add{
-                width: 90px;
+                width: 95px;
                 height: 50px;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
-                /* padding-right: 5px; */
+                padding-right: 3px;
             }
             .nav-add2{
                 display: flex;
@@ -191,6 +191,7 @@
                 height: 500px;
                 background-image: url('background.jpg');
                 background-size: cover;
+                
                 
                 /* background: linear-gradient(#e66465, #9198e5); */
                 /* mask-image: linear-gradient(); */
@@ -354,7 +355,7 @@
                 display: flex;
                 flex-wrap: wrap;
                 gap: 15px;
-                margin-left: 1.9rem;
+                margin-left: 1.1rem;
                 position:relative;
                 bottom: 3rem;
                 
@@ -363,11 +364,12 @@
             .prime-section{
                 width: 50%;
                 height: 100%;
+                background-color: #cccccc;
                 
 
             }
 
-            .prime-section img{
+            .prime-section video{
                 width: 100%;
                 height: 100%;
             }
@@ -375,17 +377,20 @@
                 width: 25%;
                 height: 100%;
                 background-color: white;
-                padding: 22px 10px;
+                padding: 22px 15px;
                 
                
                 
+            }
+           .accesories-link a, .mobile-accessories h2{
+                padding-left: 10px;
             }
             .accesories-images{
                 
                 display: flex;
                 
                 gap: 15px;
-                padding: 15px;
+                padding: 15px 10px;
                 
             }
 
@@ -419,6 +424,13 @@
             }
             a{
                 text-decoration: none;
+            }
+            .position-heading{
+                position: absolute;
+                top: 20px;
+                left: 25px;
+               font-family: Arial, Helvetica, sans-serif;
+               color: white;
             }
 
 
